修改第二章

--- a/html/PackagedProducts.html
+++ b/html/PackagedProducts.html
@@ -27,6 +27,12 @@
 			<p><img src="../img/15328319475717634.jpg"></p>
 			<p><img src="../img/14952517415248930.jpg"></p>
 		</div>
+		
+		<!--footer开始-->
+		<div class="footer">
+			<p>电脑版  关于我们</p>
+			<p>贵州大班装饰工程有限公司 手机版</p>
+		</div>
 		<!--最下面定位部分-->
 		<div class="dingwei">
 			<ul>
