第六章完成

--- a/html/wedding1.html
+++ b/html/wedding1.html
@@ -181,17 +181,21 @@
 		<div class="submit">
 			<p>提交后我们将尽快与你联系</p>
 		</div>
+		<!--footer开始-->
 		<footer class="footer">
 			<p>免费服务热线</p>
-			<i>-HOTLINE-</i>
-			<b>400-0521-202</b>
-			<p>免费服务热线</p>
-			<i>-HOTLINE-</i>
-			<p>免费服务热线</p>
+			<p>-HOTLINE-</p>
+			<p>400-0521-202</p>
+			<p>铂锐婚纱全球旅拍</p>
+			<p>-HOTLINE-</p>
+			<p>上海市长江路258号<中成智谷></p>
 			<ul>
-				<li></li>
-				<li></li>
+				<li><img src="../img/bomlogo.png"></li>
 			</ul>
+			<div class="footerBottom">
+				<h6>版权所有(C) <span>铂悦婚纱全球旅拍 </span>技术支持</h6>
+				<h6>Copyright boyue1314.com ALL Rights Reserved</h6>
+			</div>
 		</footer>
 	</body>
 </html>
