前六张修改

--- a/index.html
+++ b/index.html
@@ -24,39 +24,39 @@
 				</li>
 				<li>
 					<a href="#"><img src="img/Icon2.png"></a>
-					<p>装修产品</p>
+					<p>晚报信息</p>
 				</li>
 				<li>
 					<a href="#"><img src="img/Icon3.png"></a>
-					<p>装修产品</p>
+					<p>电视信息</p>
 				</li>
 				<li>
 					<a href="#"><img src="img/Icon4.png"></a>
-					<p>装修产品</p>
+					<p>标准工程</p>
 				</li>
 				<li>
 					<a href="#"><img src="img/Icon5.png"></a>
-					<p>装修产品</p>
+					<p>设计师</p>
 				</li>
 				<li>
 					<a href="#"><img src="img/Icon6.png"></a>
-					<p>装修产品</p>
+					<p>家装案例</p>
 				</li>
 				<li>
 					<a href="#"><img src="img/Icon7.png"></a>
-					<p>装修产品</p>
+					<p>在建工地</p>
 				</li>
 				<li>
 					<a href="#"><img src="img/Icon8.png"></a>
-					<p>装修产品</p>
+					<p>大班简介</p>
 				</li>
 				<li>
 					<a href="#"><img src="img/Icon9.png"></a>
-					<p>装修产品</p>
+					<p>家装知识</p>
 				</li>
 				<li>
 					<a href="#"><img src="img/Icon10.png"></a>
-					<p>装修产品</p>
+					<p>合作品牌</p>
 				</li>
 			</ul>
 		</div>
@@ -137,8 +137,8 @@
 					<p>中铁逸都</p>
 				</li>
 				<li>
-					<img src="img/2018100109231945.jpg">
-					<p>保利春天大道</p>
+					<img src="img/2019021210323446.jpg">
+					<p>中铁逸都</p>
 				</li>
 			</ul>
 		</div>
@@ -164,7 +164,7 @@
 					<p>中铁逸都</p>
 				</li>
 				<li>
-					<img src="img/2018100109231945.jpg">
+					<img src="img/2018102810275107.jpg">
 					<p>保利春天大道</p>
 				</li>
 			</ul>
@@ -252,5 +252,6 @@
 				<li><img src="img/down04.png"></li>
 			</ul>
 		</div>
+	
 	</body>
 </html>
