第七章完成

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/index.css" />
 	<link rel="stylesheet" href="css/iconfont.css" />
 	<body>
+	<div class="box">
 		<!--头部logo-->	
 		<header class="container">
 			<img src="img/logo.png">
@@ -243,6 +244,7 @@
 			<p>电脑版  关于我们</p>
 			<p>贵州大班装饰工程有限公司 手机版</p>
 		</div>
+	</div>
 		<!--最下面定位部分-->
 		<div class="dingwei">
 			<ul>
@@ -252,6 +254,6 @@
 				<li><img src="img/down04.png"></li>
 			</ul>
 		</div>
-	
+
 	</body>
 </html>
