第八章完成

--- a/html/Cooperation.html
+++ b/html/Cooperation.html
@@ -7,7 +7,7 @@
 	</head>
 	<link rel="stylesheet" href="../css/Cooperation.css"stylesheet" href="../css/reset.css" />
 	<body>
-	<!--<!--header晚报信息-->
+	<!--header晚报信息-->
 		<div class="header">
 			<p><</p>
 			<p>合作品牌</p>
