--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 					<p>尊贵生活研发中心主任</p>
 				</li>
 				<li>
-					<img src="img/2017092310587924.jpg">
+					<a href="#"><img src="img/2017092310587924.jpg"></a>
 					<p>毛宇</p>
 					<p>尊贵生活研发中心主任</p>
 				</li>
@@ -200,7 +200,7 @@
 					<p>金牌主管</p>
 				</li>
 				<li>
-					<img src="img/2017092310468985.jpg">
+					<a href="#"><img src="img/2017092310468985.jpg"></a>
 					<p>东波</p>
 					<p>设计主管</p>
 				</li>
