--- a/html/brand.html
+++ b/html/brand.html
@@ -30,8 +30,10 @@
 					<li><a href="#"></a><img src="../img/20170704072010822.jpg"></li>
 					<li><a href="#"></a><img src="../img/20180426070840651.jpg"></li>
 					<li><a href="#"></a><img src="../img/20180113010807574.jpg"></li>
+					<li><a href="#"></a><img src="../img/20180113125340154.jpg"></li>
 					<li><a href="#"></a><img src="../img/20170704072011443.jpg"></li>
 					<li><a href="#"></a><img src="../img/20180113010659522.jpg"></li>
+					<li><a href="#"></a><img src="../img/20170704072011306.jpg"></li>
 					<li><a href="#"></a><img src="../img/20170704072012990.jpg"></li>
 					<li><a href="#"></a><img src="../img/20170704072026209.jpg"></li>
 					<li><a href="#"></a><img src="../img/20170704072027149.jpg"></li>
