--- a/html/PackagedProducts.html
+++ b/html/PackagedProducts.html
@@ -42,5 +42,14 @@
 				<li><img src="../img/down04.png"></li>
 			</ul>
 		</div>
+		<!--<script type="text/javascript">
+			var form1 = new Form1();
+
+		    form1.Show();
+		
+		    MessageBos.Show("这里会马上显示");
+		</script>-->
+		<!--<script type="text/javascript" src="../total.js" ></script>-->
+		<!--<script type="text/javascript" src="../jquery-1.11.1.min.js" ></script>-->
 	</body>
 </html>
