--- a/html/dongbo.html
+++ b/html/dongbo.html
@@ -14,7 +14,9 @@
 			</div>
 			<!--董波图片-->
 			<div class="donglibo">
+				<img src="../img/2017092310468985.jpg" />
 				<img src="../img/2017092310508688.jpg"/>
+				
 				<div class="getBaojia">
 					<p>获取报价</p>
 				</div>
@@ -74,7 +76,7 @@
 				</li>
 				<li>
 					<a href="#"><img src="../img/2017062309344923.jpg"></a>
-					<p href="#">俊发城称/p>
+					<p href="#">俊发城称</p>
 				</li>
 				<li>
 					<a href="#"><img src="../img/2017042816137854.jpg"></a>
